syntax = "proto3";

package ul.fc.cn.proto;

message Business {
  BusinessId id = 1;
  string name = 2;
  string address = 3;
  string city = 4;
  double latitude = 5;
  double longitude = 6;
}

message BusinessId {
  string id = 1;
}

message UpdateBusinessRequest {
  BusinessId id = 1;
  Business business = 2;
}

message BusinessError {
  BusinessErrorType type = 1;
  string message = 2;

  enum BusinessErrorType {
    NOT_FOUND = 0;
    CONFLICT = 1;
    INVALID_PARAMS = 2;
    DB_ACCESS_ERROR = 3;
    UNKNOWN = 4;
  }
}

message BusinessResult {
  oneof either {
    Business business = 1;
    BusinessError error = 2;
  }
}

message SearchBusinessRequest {
  double latitude = 1;
  double longitude = 2;
  int32 radius = 3;
  int32 limit = 4;
  int32 skip = 5;
}

message SearchBusinessResponse {
  oneof either {
    BusinessList results = 1;
    SearchBusinessError error = 2;
  }

  enum SearchBusinessError {
    INVALID_PARAMS = 0;
    DB_ACCESS_ERROR = 1;
    UNKNOWN = 2;
  }
}

message BusinessList {
  repeated Business results = 1;
}

enum DELETE_BUSINESS_RESULT  {
  SUCCESS = 0;
  ERROR = 1;
  UNKNOWN = 2;
}

message DeleteBusinessResponse {
  DELETE_BUSINESS_RESULT result = 1;
}

service BusinessService {
  rpc addBusiness(Business) returns (BusinessId);
  rpc getBusiness(BusinessId) returns (BusinessResult);
  rpc updateBusiness(UpdateBusinessRequest) returns (BusinessResult);
  rpc deleteBusiness(BusinessId) returns (DeleteBusinessResponse);
  rpc searchBusiness(SearchBusinessRequest) returns (SearchBusinessResponse);
}